fixed some styling

--- a/ex3/customerFrontend.html
+++ b/ex3/customerFrontend.html
@@ -16,18 +16,18 @@
         }
 
         h3 {
-            color: #44D4EE;
+            color: #7a31da;
         }
 
         p {
-            color:#DB44EE;
+            color:#000000;
         }
 
         #reset, 
         #submit 
         {
             font-size: 40px;
-            color: #9744EE;
+            color: #ff9100;
         }
     </style>
 
